syntax = "proto3";

package planet.blog.v1;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "planet/blog/v1/params.proto";
import "planet/blog/v1/post.proto";
import "planet/blog/v1/sent_post.proto";
import "planet/blog/v1/timeout_post.proto";

option go_package = "github.com/test/planet/x/blog/types";

// GenesisState defines the blog module's genesis state.
message GenesisState {
  
  // params defines all the parameters of the module.
           Params      params           = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
           string      port_id          = 2;
  repeated Post        postList         = 3 [(gogoproto.nullable) = false] ;
           uint64      postCount        = 4;
  repeated SentPost    sentPostList     = 5 [(gogoproto.nullable) = false] ;
           uint64      sentPostCount    = 6;
  repeated TimeoutPost timeoutPostList  = 7 [(gogoproto.nullable) = false] ;
           uint64      timeoutPostCount = 8;
}

